# OOP-Game

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio
.reports/lb2/: lb2.docx
.reports/lb2/uml/: lb2.drawio
include/: cell.hpp  config.hpp  drawer.h  entity.h  entity.hpp  field.h  field.hpp  field_painter.h  game.h  game.hpp  itile.h  sample.h  tile.h
log/: log.txt
saves/: save.txt
settings/: config.h  sample.txt
source/: CMakeLists.txt  main.cpp
source/Drawer/: drawer.cpp  drawer.h
source/Entity/: entity.h
source/Entity/Alive/: alive.cpp  alive.h
source/Entity/Alive/Enemy/: enemy.cpp  enemy.h
source/Entity/Alive/Enemy/Goblin/: goblin.cpp  goblin.h
source/Entity/Alive/Enemy/Slime/: slime.cpp  slime.h
source/Entity/Alive/Enemy/Troll/: troll.cpp  troll.h
source/Entity/Alive/Hero/: hero.cpp  hero.h
source/Entity/Item/: item.cpp  item.h
source/Field/: field.cpp  field.h  field_builder.cpp  field_builder.h
source/Game/: game.cpp  game.h
source/Game/KeyAdapter/: key_adapter.cpp  key_adapter.h
source/Game/Rules/: rules.h
source/LogSystem/: adapter.cpp  adapter.h  logger_pool.cpp  logger_pool.h  observed.h  observer.h
source/LogSystem/Loggers/: console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  ilogger.h
source/LogSystem/Loggers/LogMessage/: log_message.cpp  log_message.h
source/Movers/: enemy_mover.cpp  enemy_mover.h  hero_mover.cpp  hero_mover.h
source/Structures/: direction.h  event_reaction.h  field_sample.h  item_type.h  log_signal.h  rules_structures.h  tile_type.h
source/Tile/: tile.cpp  tile.h
source/include/: field.h  game.h  tile.h
source/settings/: config.h
source/src/: enemy.cpp  field.cpp  field_painter.cpp  game.cpp  main.cpp  tile.cpp
src/: cell.cpp  drawer.cpp  entity.cpp  field.cpp  game.cpp  main.cpp  tile.cpp
src/Alive Entity/: alive_entity.h
src/Drawer/: drawer.cpp  drawer.h
src/Entity/Alive/: alive.cpp  alive.h
src/Entity/Alive/Enemy/: enemy.cpp  enemy.h
src/Entity/Alive/Enemy/Goblin/: goblin.cpp  goblin.h
src/Entity/Alive/Enemy/Slime/: slime.cpp  slime.h
src/Entity/Alive/Enemy/Troll/: troll.cpp  troll.h
src/Entity/Alive/Hero/: hero.cpp  hero.h
src/Entity/Item/: item.h
src/Entity/Item/Consumable/: consumable.h
src/Field/: field.cpp  field.h  field_builder.cpp  field_builder.h
src/Game/: game.cpp  game.h
src/Interfaces/: entity.h  i_entity.h
src/Tile/: tile.cpp  tile.h  tile_type_enum.h
tests/: test.cpp
